# qt_heavy_computation

./: CMakeLists.txt
src/: CMakeLists.txt  heavy_computation.cpp  heavy_computation_object.cpp  heavy_computation_object.h  heavy_computation_widget.cpp  heavy_computation_widget.h  heavy_computation_widget.ui
